@@ -2,6 +2,8 @@ package com.monthlyzip.domain.notice.service;
 
 import com.monthlyzip.domain.building.model.entity.Building;
 import com.monthlyzip.domain.building.repository.BuildingRepository;
+import com.monthlyzip.domain.contract.model.entity.Contract;
+import com.monthlyzip.domain.contract.repository.ContractRepository;
 import com.monthlyzip.domain.member.entity.Member;
 import com.monthlyzip.domain.member.repository.MemberRepository;
 import com.monthlyzip.domain.notice.model.dto.request.NoticeRequestDto;
@@ -26,6 +28,7 @@ public class NoticeService {
 
     private final NoticeRepository noticeRepository;
     private final BuildingRepository buildingRepository;
+    private final ContractRepository contractRepository;
 
     public NoticeResponseDto createNotice(NoticeRequestDto requestDto, Member landlord) {
         Building building = buildingRepository.findById(requestDto.getBuildingId())
@@ -47,18 +50,51 @@ public class NoticeService {
         return NoticeResponseDto.of(notice);
     }
 
+    private Building findTenantBuilding(Member tenant) {
+        Contract contract = contractRepository.findLatestByTenantId(tenant.getId())
+                .orElseThrow(() -> new BusinessException(ApiResponseStatus.CONTRACT_NOT_FOUND));
+
+        return contract.getRoom().getBuilding();
+    }
 
 
-    public List<NoticeResponseDto> getNoticesByBuilding(Long buildingId) {
-        if (!buildingRepository.existsById(buildingId)) {
-            throw new BusinessException(ApiResponseStatus.BUILDING_NOT_FOUND);
+    public List<NoticeResponseDto> getNotices(Long buildingId, Member member) {
+        // ✅ buildingId가 전달되면 해당 건물 공지사항만 조회
+        if (buildingId != null) {
+            if (!buildingRepository.existsById(buildingId)) {
+                throw new BusinessException(ApiResponseStatus.BUILDING_NOT_FOUND);
+            }
+
+            return noticeRepository.findByBuildingId(buildingId)
+                    .stream()
+                    .map(NoticeResponseDto::of)
+                    .collect(Collectors.toList());
         }
 
-        return noticeRepository.findByBuildingId(buildingId)
-                .stream()
-                .map(NoticeResponseDto::of)
-                .collect(Collectors.toList());
+        // ✅ buildingId 없을 때 유저 타입 기준으로 분기
+        if (member.isLandlord()) {
+            List<Long> ownedBuildingIds = buildingRepository.findByOwnerId(member.getId())
+                    .stream()
+                    .map(Building::getId)
+                    .toList();
+
+            return noticeRepository.findByBuildingIdIn(ownedBuildingIds)
+                    .stream()
+                    .map(NoticeResponseDto::of)
+                    .collect(Collectors.toList());
+        }
+
+        if (member.isTenant()) {
+            Building tenantBuilding = findTenantBuilding(member);
+            return noticeRepository.findByBuildingId(tenantBuilding.getId())
+                    .stream()
+                    .map(NoticeResponseDto::of)
+                    .collect(Collectors.toList());
+        }
+
+        throw new BusinessException(ApiResponseStatus.UNAUTHORIZED);
     }
+
 
     public NoticeResponseDto getNoticeById(Long noticeId) {
         Notice notice = noticeRepository.findById(noticeId)
